Estilização do layout desktop

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </ul>
             </section>
             <section class="sobre container">
-                <div class="sobre__conteudo">
+                <div class="sobre__conteudo"></div>
                     <h2 class="sobre__titulo">Sobre</h2>
                     <p class="sobre__texto">Criamos aplicativos personalizados para <strong class="sobre__texto--destaque">todas as pessoas</strong>!</p>
                     <p class="sobre__texto">
