--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link href="css/planos.css" rel="stylesheet">
         <link href="css/contato.css" rel="stylesheet">
         <link href="css/institucional.css" rel="stylesheet">
+        <link href="css/rodape.css" rel="stylesheet">
     </head>
     <body>
         <header class="cabecalho container">
@@ -149,5 +150,23 @@
                 controls></video>
             </section>
         </main>
+        <footer class="rodape container">
+            <img src="img/logo-apeperia.svg" alt="Logo da apeperia" class="rodape__logo">
+            <ul class="rodape__social">
+                <1i><a href="#" class="rodape__midia"><img src="img/facebook.png" alt="Icone do facebook"></a></1i>
+                <1i><a href="#" class="rodape__midia"><img src="img/twitter.png" alt="Icone do twitter"></a></1i>
+                <1i><a href="#" class="rodape__midia"><img src="img/instagram.png" alt="Icone do instagram"></a></1i>
+            </ul>
+            <nav>
+                <ul class="rodape__navegacao">
+                    <li class="rordape__link"><a href="#">Sobre</a></li>
+                    <li class="rordape__link"><a href="#">Planos</a></li>
+                    <li class="rordape__link"><a href="#">Blog</a></li>
+                    <li class="rordape__link"><a href="#">Destaques</a></li>
+                    <li class="rordape__link"><a href="#">Institucional</a></li>
+                    <li class="rordape__link"><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </footer>
     </body>
 </html>
